[project]
name = "UrbanAccessAnalyzer"
version = "0.1.0"
description = "Use graphs and OSM data to compute isochrones and accessibility to services"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "geopandas>=1.0.0",
    "geopy>=2.4.1",
    "networkx>=3.5",
    "numpy>=1.22",
    "osm2geojson>=0.2.6",
    "osmnx>=2.0.5",
    "pandas>=2.2.0",
    "polars>=1.25.0",
    "pyarrow>=18.0.0",
    "pycountry>=24.6.1",
    "rapidfuzz>=3.13.0",
    "rasterio>=1.4.3",
    "requests>=2.0.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.5.0",
    "scikit-image>=0.25.2",
    "shapely>=2.1.1",
    "tqdm>=4.0.0",
    "streamlit>=1.50.0",
    "matplotlib>=3.10.7",
    "mapclassify>=2.10.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["UrbanAccessAnalyzer*"]
exclude = ["tutorials*"]
